# kth-deep-learning

./: README.md  build.py  pyproject.toml
assigments/cifar10/: classifier.py
assignments/: assignment-1-hinge.ipynb  assignment-2-bonus.ipynb  assignment-2-verification.ipynb  assignment-2.ipynb  assignment-3-verification.ipynb  assignment-3.ipynb  assignment-4-verification.ipynb  assignment-4.ipynb  crater
assignments/cifar10/: __init__.py  batch_norm.py  classifier.py  data.py  experiment.py  layers.py  learning_rate.py  operations.py  relu.py  sgd.py  softmax.py  stack.py
assignments/rnn/: __init__.py  ada_grad.py  experiment.py  passage.py  rnn.py  synthesize.py  text.py  tweet.py  tweets.py
crater/: __init__.py  layer.py  tensor.py  utils.py
crater/gradient/: __init__.py  gradient.py  gradients.py
crater/operations/: __init__.py  add.py  broadcast.py  clip.py  coalesce.py  divide.py  exp.py  expand_dims.py  log.py  matrix_multiply.py  multiply.py  negate.py  operation.py  sigmoid.py  softmax.py  squeeze.py  subtract.py  sum.py  tanh.py  tile.py
crater/premade/: __init__.py  batch_normalization.py  classifier.py  layer.py  rnn.py
crater/recorder/: __init__.py  active.py  recorder.py
test/: test_gradient.py  test_integration.py  test_layer.py  test_recorder.py  test_tensor.py
test/operations/: test_add.py  test_broadcast.py  test_clip.py  test_divide.py  test_exp.py  test_expand_dims.py  test_log.py  test_matrix_multiply.py  test_multiply.py  test_negate.py  test_sigmoid.py  test_softmax.py  test_squeeze.py  test_subtract.py  test_sum.py  test_tile.py
(+2 files in other folders)
