[tool.poetry]
name = "kth-deep-learning"
version = "0.1.0"
description = ""
authors = ["malyvsen <5940672+malyvsen@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.20.2"

[tool.poetry.dev-dependencies]
jupyter = "^1.0.0"
plotly = "^4.14.3"
black = "^20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
